--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 PORT = 8000
 CORS_ORIGIN=*
 MONGODB_URI = mongodb+srv://nishant:nishant@cluster0.ycendxu.mongodb.net
+ACCESS_TOKEN_SECRET=0TUCkcyqgZAaMOogRHVIg9GG_Gzh9zMocyOUtNdDNtoJ0X0-5n3DmVkx08MCFRSLD9cv1kBfLwK7fdO
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=CJ0X0-5aMdDNtowD9cv00VIg9GG_OGzh9zMocy03UtN1kBfLRn3Dmkx08MCFRSLHVTUkcyqgZAK7d0
+REFRESH_TOKEN_EXPIRY=10d
