--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,6 @@ ACCESS_TOKEN_SECRET=0TUCkcyqgZAaMOogRHVIg9GG_Gzh9zMocyOUtNdDNtoJ0X0-5n3DmVkx08MC
 ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=CJ0X0-5aMdDNtowD9cv00VIg9GG_OGzh9zMocy03UtN1kBfLRn3Dmkx08MCFRSLHVTUkcyqgZAK7d0
 REFRESH_TOKEN_EXPIRY=10d
+CLOUDINARY_CLOUD_NAME = 
+CLOUDINARY_API_KEY = 
+CLOUDINARY_SECRET_KEY = 
